--- a/style.css
+++ b/style.css
@@ -70,3 +70,72 @@ body {
     margin-right: 20%;
     color: brown;
 }
+
+.foods-sector h3 {
+    text-align: center;
+    font-size: 40px;
+}
+
+.foods-sector p {
+    text-align: center;
+    font-size: 25px;
+    padding-left: 25%;
+    padding-right: 25%;
+}
+
+.foods {
+    display: flex;
+    padding-left: 10%;
+    padding-right: 5%;
+    margin-bottom: 100px;
+}
+
+.food-item {
+    width: 100%;
+    height: fit-content;
+    margin-right: 5%;
+    padding: 15px;
+    border-radius: 30px;
+    box-shadow: 10px 10px 40px gray;
+}
+
+.food-item img {
+    height: 40%;
+    width: 100%;
+    border-radius: 20px;
+}
+
+.food-item h4 {
+    font-size: 25px;
+}
+
+.foods p {
+    text-align: left;
+    padding-bottom: 0;
+}
+
+.social-media {
+    display: flex;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 100px;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 40px gray;
+}
+
+.media {
+    width: 25%;
+    padding-left: 10%;
+}
+
+.media h2 {
+    font-size: 40px;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    font-weight: 700;
+}
+
+.media p {
+    font-size: 20px;
+}
