--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
 
 .mid-field {
     display: flex;
-    background-image: url(images/shapes/Frame\ 57.jpg);
+    background-image: url(images/shapes/7.png);
     background-repeat: no-repeat;
     background-size: 100%;
     height: 700px;
@@ -59,7 +59,7 @@ body {
 
 #female-image {
     height: 90%;
-    padding-top: 10.5%;
+    padding-top: 8%;
     padding-left: 25%;
 }
 
@@ -78,7 +78,7 @@ body {
 
 .foods-sector p {
     text-align: center;
-    font-size: 30px;
+    font-size: 25px;
     padding-left: 25%;
     padding-right: 25%;
 }
